--- a/pointscalculator-rpubs.html
+++ b/pointscalculator-rpubs.html
@@ -752,6 +752,7 @@ hljs.initHighlightingOnLoad();
 <h1>Weight Watchers Points Calculator</h1><p>Brian Carlton<br/>19 June 2015</p>
 
 <div class="slideContent" >
+<p><a href="https://github.com/bcarlton/devdataprod-015">GitHub repo</a></p>
 
 </div>
 
@@ -772,7 +773,7 @@ hljs.initHighlightingOnLoad();
 <section data-transition="zoom" data-transition-speed="default">
 <h3>Formula demo</h3>
 <div class="column column1 slideContent" style="width: 28%;" >
-<p>Here is the the point value for a serving of some Light Butter Popcorn from a US label.</p>
+<p>Here is the point value for a serving of some Light Butter Popcorn from a US label.</p>
 
 
 </div>
